@@ -186,6 +186,7 @@ namespace libtorrent
 			, max_suggest_pieces(10)
 			, drop_skipped_requests(false)
 			, low_prio_disk(true)
+			, local_service_announce_interval(5 * 60)
 			, volatile_read_cache(false)
 			, guided_read_cache(true)
 			, default_cache_min_age(1)
@@ -688,6 +689,10 @@ namespace libtorrent
 		// to foreground tasks, while bittorrent runs
 		// in the background
 		bool low_prio_disk;
+
+		// number of seconds between local service announces for
+		// torrents. Defaults to 5 minutes
+		int local_service_announce_interval;
 
 		// if this is set to true, any block read from the
 		// disk cache will be dropped from the cache immediately
